[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-velatir"
version = "0.1.0"
description = "LangChain integration for Velatir - AI governance, compliance, and human-in-the-loop workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Velatir", email = "hello@velatir.com"}
]
keywords = [
    "langchain",
    "velatir",
    "ai-governance",
    "compliance",
    "human-in-the-loop",
    "guardrails",
    "middleware",
    "eu-ai-act",
    "gdpr"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "velatir>=1.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://www.velatir.com"
Documentation = "https://www.velatir.com/docs"
Repository = "https://github.com/velatir/langchain-velatir"
"Bug Tracker" = "https://github.com/velatir/langchain-velatir/issues"
Changelog = "https://github.com/velatir/langchain-velatir/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/velatir/langchain-velatir"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_velatir*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
